<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
            app:contentScrim="?attr/colorOnPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="?attr/colorOnPrimary"
            app:toolbarId="@id/toolbar">

            <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                android:id="@+id/carousel"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/breed_image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/breedDetailsCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                    android:layout_marginVertical="@dimen/margin_padding_size_small">

                    <TextView
                        android:id="@+id/breedName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fira_sans_bold"
                        android:text="@string/breed_name"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fira_sans"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/breedName" />

                    <TextView
                        android:id="@+id/breedGroupLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fira_sans_bold"
                        android:text="@string/breed_group"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name" />

                    <TextView
                        android:id="@+id/breedGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fira_sans"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/breedGroupLabel" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/moreBreedDetailsCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_padding_size_small"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/breedDetailsCard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_size_small">

                    <TextView
                        android:id="@+id/moreDetails"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_bold"
                        android:text="@string/breed_details"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline5"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/bredForLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_semibold"
                        android:text="@string/bred_for"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/moreDetails" />

                    <TextView
                        android:id="@+id/bredForValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_light"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bredForLabel" />

                    <TextView
                        android:id="@+id/temperament"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_semibold"
                        android:text="@string/temperament"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/bredForValue" />

                    <TextView
                        android:id="@+id/temperamentValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_light"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temperament" />

                    <TextView
                        android:id="@+id/lifeSpan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_semibold"
                        android:text="@string/life_span"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/temperamentValue" />

                    <TextView
                        android:id="@+id/lifeSpanValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_light"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lifeSpan" />

                    <TextView
                        android:id="@+id/origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_semibold"
                        android:text="@string/origin"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/lifeSpanValue" />

                    <TextView
                        android:id="@+id/originValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_padding_size_medium"
                        android:fontFamily="@font/fira_sans_light"
                        android:textAlignment="textStart"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/origin" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
